--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -224,7 +224,8 @@ ul.pagination {
 }
 
 .page-config {
-    form { margin-top: 40px }
+    form { margin-top: 20px }
+    .tab-pane { padding: 20px 0 }
     .actions button { margin-bottom: 10px; }
 }
 
