Finalized language switcher widget

--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -374,6 +374,8 @@ ul.pagination {
     li .scores .left-draw { color: @orange }
 }
 
+.widget-languages a[data-active="1"] { display: none; }
+
 .page-servers .server { margin-bottom: 20px }
 
 @forumsBoxColor: @primaryColor;
