--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -180,6 +180,7 @@ ul.pagination {
     border-radius: 0; font-weight: bold; color: white;
     a { color: white; text-decoration: underline }
 }
+#content > .alert { margin-bottom: 0 /* remove bottom margin of a "global" alert so it does not break the page head */ }
 .alert-success { border-color: #69DD95; background: @green; }
 .alert-danger { border-color: #F26175; background: @red; }
 .alert-warning { border-color: #F8C93F; background: @yellow; }
