--- a/resources/assets/less/shared.less
+++ b/resources/assets/less/shared.less
@@ -48,13 +48,13 @@
 
 /* Spoiler */
 .spoiler-wrapper { 
-    margin: 20px 0; padding: 0 10px; background-color: #EEE;
+    margin: 20px 0; padding: 0 10px;
     &.show { padding-bottom: 10px; }
     .spoiler-toggle { padding: 10px 0; cursor: pointer }
-    .spoiler-toggle::before { content: "\f0da"; font-family: 'Font Awesome\ 5 Free;' }
+    .spoiler-toggle::before { content: "\f0fe"; font-family: Font Awesome\ 5 Free; }
     &.show {
         .spoiler { height: auto; overflow: visible; }
-        .spoiler-toggle::before { content: "\f0d7"; }
+        .spoiler-toggle::before { content: "\f146"; }
     }
 }
 .spoiler { height: 0; overflow: hidden; }
