--- a/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/PhobosTheme/Resources/Assets/less/frontend.less
@@ -545,6 +545,8 @@ ul.pagination {
     .page-friends .friend { width: 33% }
 }
 
+.page-contact textarea { resize: vertical }
+
 .page-messages {
     .message-text {
         word-wrap: break-word; overflow-x: hidden;
