Refactoring: Renamed the category models

--- a/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
+++ b/app/Modules/MorpheusTheme/Resources/Assets/less/frontend.less
@@ -331,12 +331,13 @@ ul.pagination {
 }
 
 .page-downloads {
-    .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0 20px 20px 20px; text-align: center; }
+    .download-cats .download-cat { display: block; float: left; width: 100px; margin: 0 20px 20px 20px; text-align: center; }
     .downloads .download { 
         display: block; float: left; width: 100px; margin: 0 20px 20px 20px; text-align: center; .background-image('theme/file.png'); background-position: center top; background-repeat: no-repeat;
         a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
     }
 }
+.page-downloads-show .download-detail button[type=submit] i:before { content: "\f019" }
 
 .page-matches {
     .overview {
