--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -7464,7 +7464,7 @@ textarea.model-search-box input {
   width: 100%;
   height: 100%;
 }
-.page-downloads .downloadcats .downloadcat {
+.page-downloads .download-cats .download-cat {
   display: block;
   float: left;
   width: 100px;
@@ -7486,6 +7486,9 @@ textarea.model-search-box input {
   padding-top: 100px;
   background-position: center 20px;
   background-repeat: no-repeat;
+}
+.page-downloads-show .download-detail button[type=submit] i:before {
+  content: "\f019";
 }
 .page-matches .overview > div {
   width: 33%;
