--- a/resources/assets/less/shared.less
+++ b/resources/assets/less/shared.less
@@ -59,6 +59,9 @@
 }
 .spoiler { height: 0; overflow: hidden; }
 
+/* Form validation errors */
+.form-errors li[data-field] { cursor: pointer }
+
 /* Model table */
 .table[data-model-table="1"][data-brighten-first="1"] tr td:first-child { color: silver }
 .table[data-model-table="1"] tr td:last-child { width: 1%; white-space: nowrap; }
