--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6603,7 +6603,6 @@ button.close {
 .spoiler-wrapper {
   margin: 20px 0;
   padding: 0 10px;
-  background-color: #EEE;
 }
 .spoiler-wrapper.show {
   padding-bottom: 10px;
@@ -6613,15 +6612,15 @@ button.close {
   cursor: pointer;
 }
 .spoiler-wrapper .spoiler-toggle::before {
-  content: "\f0da";
-  font-family: 'Font Awesome\ 5 Free;';
+  content: "\f0fe";
+  font-family: Font Awesome\ 5 Free;
 }
 .spoiler-wrapper.show .spoiler {
   height: auto;
   overflow: visible;
 }
 .spoiler-wrapper.show .spoiler-toggle::before {
-  content: "\f0d7";
+  content: "\f146";
 }
 .spoiler {
   height: 0;
@@ -8137,7 +8136,7 @@ header .header-logo {
   padding: 20px 0 20px 40px;
   border-bottom: 1px solid silver;
   font-size: 18px;
-  transition: all 0.1s linear;
+  transition: all 0.5s linear;
 }
 .page-head i {
   display: inline-block;
