--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -339,6 +339,15 @@ ul.pagination {
     .stack-line { margin-bottom: 5px; padding: 5px; border-bottom: 1px solid #ddd; }
 }
 
+.page-contact-admin-show .reply-area {
+    #show-reply-form { display: none }
+    form { display: block }
+}
+.page-contact-admin-show .reply-area.reply-form-hidden {
+    #show-reply-form { display: inline-block }
+    form { display: none }
+}
+
 .page-cash-flows.page-model-index {
     .revenues { padding: 2px 5px; background-color: @green; color: white; font-weight: bold; }
     .expenses { padding: 2px 5px; background-color: @red; color: white; font-weight: bold; }
